# spintronic-qrc

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  OVERVIEW.md  README.md  REFERENCES.md  environment.yml  pyproject.toml
benchmarks/: .gitkeep
data/: .gitkeep
docs/: README.md  api.md  notebooks.md  physics.md  testing.md
figures/: .gitkeep
notebooks/: .gitkeep
src/spintronic_qrc/: __init__.py  encoder.py  gates.py  pipeline.py  readout.py  reservoir.py  tasks.py  trainer.py  utils.py
tests/: conftest.py  test_pipeline.py  test_reservoir.py  test_tasks.py  test_trainer.py
